add final visualzations

--- a/notebooks/03_find_roads_without_bikeroads.ipynb
+++ b/notebooks/03_find_roads_without_bikeroads.ipynb
@@ -45,20 +45,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "dbe646b2",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/michal/miniconda3/envs/przestrzenne/lib/python3.8/site-packages/momepy/utils.py:235: UserWarning: Geometry is in a geographic CRS. Results from 'length' are likely incorrect. Use 'GeoSeries.to_crs()' to re-project geometries to a projected CRS before this operation.\n",
-      "\n",
-      "  gdf_network[length] = gdf_network.geometry.length\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "DATA_DIRECTORY = STORAGE_PATH / 'data'\n",
     "\n",
@@ -67,7 +55,13 @@
     "trasy_rowerowe  = gpd.read_file(DATA_DIRECTORY / 'bikeroads.geojson').to_crs(target_crs)\n",
     "# trasy_rowerowe = trasy_rowerowe.query('TYP != \"strefa ruchu uspokojonego 20 i 30 km/h\"')\n",
     "trasy_rowerowe_graph = momepy.gdf_to_nx(trasy_rowerowe.to_crs(map_crs), approach='primal')"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
